--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,9 @@
 
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
-# User-specific stuff
 
+# User-specific stuff
+**/.idea/**/workspace.xml
 **/.idea/**/tasks.xml
 **/.idea/**/usage.statistics.xml
 **/.idea/**/dictionaries
@@ -11,7 +12,12 @@
 
 # Generated files
 **/.idea/**/contentModel.xml
-out/
+target/
+*.class
+hs_err_pid*
+.DS_Store
+
+
 
 
 
