statistic view added

--- a/15/session/src/main/resources/application.properties
+++ b/15/session/src/main/resources/application.properties
@@ -4,5 +4,6 @@ spring.datasource.password=12541254
 spring-jpa.hibernate.ddl-auto=create
 
 
-
+db.name = sessions
 db.username = root
+db.password = 12541254
