--- a/15/session/src/main/resources/application.properties
+++ b/15/session/src/main/resources/application.properties
@@ -1,9 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/sessions?useUnicode=true&serverTimezone=UTC
+spring.datasource.myDb = sessions
+spring.datasource.url=jdbc:mysql://localhost:3306/${spring.datasource.myDb}?useUnicode=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=12541254
 spring-jpa.hibernate.ddl-auto=create
-
-
-db.name = sessions
-db.username = root
-db.password = 12541254
